--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         buildConfigField "int", "LIMIT", "100"
-        buildConfigField "String", "BASEURL", "\"http://private-b8cf44-androidcleancode.apiary-mock.com/\""
+        buildConfigField "String", "BASEURL", "\"https://private-8e98e-city6.apiary-mock.com/\""
         buildConfigField "int", "CACHETIME", "432000" // 5days
     }
     buildTypes {
